# clustergram

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  environment.yaml  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: release_to_pypi.yml  tests.yaml
ci/envs/: latest.yaml  minimal.yaml
clustergram/: __init__.py  _version.py  clustergram.py  test_clustergram.py
doc/: api.rst  conf.py  contributing.md  environment.yml  evaluation.ipynb  index.md  index.rst  install.md  introduction.ipynb  methods.ipynb  plotting.ipynb  requirements.txt
doc/_static/: custom.css
doc/_templates/: bodyheader.html  docs-sidebar.html
doc/notebooks/: evaluation.ipynb  introduction.ipynb  methods.ipynb  plotting.ipynb
examples/: introduction.ipynb
paper/: figures.ipynb  paper.bib  paper.md
